--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
     }
     async function main() {
       await liff.init({
-        liffId: "1656876937-Q7lZZP0G"
+        liffId: "1656876937-jZMmmKGk"
       })
       if (!liff.isLoggedIn()) {
         liff.login()
